2007-02-09  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Contacts/SOGoContactFolders.m ([SOGoContactFolders
	-appendPersonalSourcesInContext:context]): we now fetch all
	folders with type "Contact" that belong to the current user.
	([SOGoContactFolders -newFolderWithName:name]): new method to
	create a new contact folder.

	* UI/SOGoUI/UIxComponent.m ([UIxComponent -userFolderPath]): treat
	resulting url with [NSString+Utilities hostlessURL] instead of
	using NSURL. This is because the url in question sometimes has a
	hostname and sometimes not. "hostlessURL" ensure the hostname is
	removed anyway.
	([UIxComponent -applicationPath]): same as above.

2007-02-08  Ludovic Marcotte <ludovic@inverse.ca>

	* SoObjects/Mailer/SOGoMailFolder.m: priorize the lookup of
	folders before doing the one on messages.

2007-02-08  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/NSArray+Utilities.m: added an implementation of
	makeObjectsPerform:withObject:withObject: for GNUstep
	compatibility.
	
	* OGoContentStore/GNUmakefile, Protocols/common.make,
	SoObjects/common.make, UI/common.make: install in
	GNUSTEP_INSTALLATION_DIR instead of GNUSTEP_USER_DIR.

2007-02-07  Ludovic Marcotte <ludovic@inverse.ca>

	* UI/Scheduler/English.lproj/Localizable.strings: fixed typo for
	"Agendas"

2007-02-05  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/MailerUI/UIxMailTree.m ([UIxMailTree
	-getTitle:folderType:andIcon:forObject:]): disabled Sieve folders
	for the moment.

	* SoObjects/SOGo/SOGoAuthenticator.m ([SOGoAuthenticator
	-checkLogin:_loginpassword:_pwd]): fixed a bug where a wrong
	password would be accepted anyway as long as its length was > 0.
	This can be the case ONLY when LDAP is disabled otherwise we have
	a serious security issue...

	* SoObjects/Appointments/SOGoAppointmentObject.m
	([SOGoAppointmentObject -roleOfUser:logininContext:context]): if a
	user is not an organizer nor a participant, he is declared as